Re-attempt to fix broken css in prod

--- a/assets/scss/_indicator.scss
+++ b/assets/scss/_indicator.scss
@@ -3,7 +3,6 @@
   p {
     text-align: center;
     font-size: 0.8rem;
-    white-space: nowrap;
   }
   #indicator {
     display: inline-block;
